--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # --- Change what appears in the banner --- #
-title: My Language Learning Website
-description: This is the tag-line of my website.
+title: Speedy Spanish
+description: Your optimum language learning website.
 
 # --- Change language of site --- #
 lang: en
