--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # --- Change what appears in the banner --- #
-title: Speedy Spanish
-description: Your optimum language learning website.
+title: Snap Spanish
+description: Your optimum language loving & learning website.
 
 # --- Change language of site --- #
 lang: en
