--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # --- Change what appears in the banner --- #
-title: Snap Spanish
+title: Snappin' Spanish
 description: Your optimum language loving & learning website.
 
 # --- Change language of site --- #
